# haskell-minirotate

./: LICENSE  Makefile  README  doc.html  index.html  minirotate.cabal
doc/: Makefile  minirotate.html  minirotate.pandoc
src/: Main.hs  Options.hs  Pattern.hs
