name:                minirotate
version:             0.1.0.0
synopsis:            Minimalistic file rotation utility
description:         Minimalistic file rotation utility
category:            Development
license:             BSD3
license-file:        LICENSE
author:              Krzysztof Skrzetnicki <krzysztof.skrzetnicki+hackage@gmail.com>
maintainer:          Krzysztof Skrzetnicki <krzysztof.skrzetnicki+hackage@gmail.com>
homepage:            http://tener.github.com/haskell-minirotate
build-type:          Simple
Cabal-Version: >= 1.6

source-repository    head
    Type:     Git
    Location: http://github.com/Tener/haskell-minirotate.git

source-repository    this
    Type:     Git
    Location: http://github.com/Tener/haskell-minirotate.git
    Tag: 0.1.0.0


executable           minirotate
      hs-source-dirs: src
      main-is:       Main.hs
      build-depends: filepath >= 1.1.0 && < 1.2.0,
                     base >= 4 && < 5,
                     directory >= 1,
                     data-accessor-template == 0.2.1.3,
                     data-accessor == 0.2.1.2
